[Finished #79376308] - Fix Offer Detail Modal on Mobile
Title was getting cut off. Removed nowrap and ellipsis from styles, there is planty of room for the title to wrap down.

--- a/web/knotis/contrib/layout/static/knotis/layout/css/screen.css
+++ b/web/knotis/contrib/layout/static/knotis/layout/css/screen.css
@@ -2340,9 +2340,6 @@ section.welcomeModal h1 {
     font-size: 14px;
     position: absolute;
     top: 84px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
     width: 50%;
 }
 
@@ -2620,7 +2617,10 @@ section.welcomeModal h1 {
 
     .offerHero h1,
     .offerHero h2 {
-	left: 130px;
+	left: 0;
+	margin-right: 10px;
+	margin-left: 135px;
+	white-space: normal;
     }
 
     .offerHero img.profile-badge {
